--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,34 +1,8 @@
-assembly-versioning-scheme: MajorMinorPatch
+mode: mainline
+tag-prefix: '[vV]'
+commit-message-incrementing: Enabled
 major-version-bump-message: "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\\([\\w\\s-]*\\))?(!:|:.*\\n\\n((.+\\n)+\\n)?BREAKING CHANGE:\\s.+)"
 minor-version-bump-message: "^(feat)(\\([\\w\\s-]*\\))?:"
 patch-version-bump-message: "^(build|chore|ci|docs|fix|perf|refactor|revert|style|test)(\\([\\w\\s-]*\\))?:"
-commit-message-incrementing: Enabled
-next-version: 1.0.0
-mode: ContinuousDeployment
-continuous-delivery-fallback-tag: ''
-branches:
-  develop:
-    tag: 'develop'
-    increment: Patch
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
-    regex: ^develop$
-    source-branches: [ ]
-    tracks-release-branches: false
-    is-release-branch: false
-    pre-release-weight: 0
-    is-source-branch-for:
-    - main
-  main:
-    tag: ''
-    increment: Patch
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
-    regex: ^main$
-    source-branches:
-    - develop
-    tracks-release-branches: false
-    is-release-branch: true
-ignore:
-  sha: []
-merge-message-formats: {}
+no-bump-message: '\+semver:\s?(none|skip)'
+assembly-informational-format: '{Major}.{Minor}.{Patch}'
